--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			<div id="header"></div>
 			<div id="content">
 				<div id="mainbar"></div>
-				<div is="sidebar"></div>
+				<div id="sidebar"></div>
 			</div>
 		</div>
 	</body>
