--- a/index.html
+++ b/index.html
@@ -8,17 +8,23 @@
 	</head>
 	<body class="home-page">
 		<div class="container">
-			<div id="header">HEADER</div>
+			<div id="header">
+			  <div id="logo"></div>
+			  <div id="content-tp"></div>
+			</div>
 			<div id="content">
-				<div id="mainbar">MAINBAR
-				    <div id="brag-form"></div>
-				    <div class="brag-list">
-				       <div class="brag-entry">
-				           <div class="brag-message">brag-message</div>       	
-				           <div class="brag-categories">brag-categories</div>       	
-				           <div class="brag-stats">brag-stats</div>       	
-						   <div class="brag-comments">brag-comments</div>   
-				       </div>
+				<div id="content-mid">
+				    <div id="mainbar">
+				        <div id="brag-form"></div>
+				        <div class="brag-list">
+				            <div class="brag-entry">
+					            <h2>Will Merydith</h2> 
+				                <div class="brag-message">brag-message</div>       	
+				                <div class="brag-categories">brag-categories</div>       	
+				                <div class="brag-stats">brag-stats</div>       	
+						        <div class="brag-comments">brag-comments</div>   
+				            </div>
+				        </div>
 				    </div>
 				</div> 
 				<div id="sidebar">SIDEBAR</div>
