Updated layout styles for user profile page.

--- a/index.html
+++ b/index.html
@@ -15,14 +15,25 @@
 			<div id="content">
 				<div id="content-mid">
 				    <div id="mainbar">
+					    <div id="user-profile">
+						    <div class="profile-image">
+							    <img src="http://profile.ak.fbcdn.net/hprofile-ak-snc4/hs1324.snc4/161504_679874743_3913937_q.jpg"/>
+							</div>
+						    <div class="profile-name">
+							    <h2>Will Merydith</h2>
+							</div> 
+						</div>
 				        <div id="brag-form"></div>
 				        <div class="brag-list">
-				            <div class="brag-entry">
-					            <h2>Will Merydith</h2> 
-				                <div class="brag-message">brag-message</div>       	
-				                <div class="brag-categories">brag-categories</div>       	
-				                <div class="brag-stats">brag-stats</div>       	
-						        <div class="brag-comments">brag-comments</div>   
+				            <div class="brag-entry">					            
+				                <div class="brag-message">
+					                <p>brag-message</p>
+					            </div>       	
+				                <div class="brag-meta">
+					                <p>2 hours ago - <a href="#">#organic</a> <a href="#">#sustainable</a></p>
+					            </div>       	
+				                <div class="brag-stats">...</div>       	
+						        <div class="brag-comments">...</div>   
 				            </div>
 				        </div>
 				    </div>
