Added styled form.

--- a/index.html
+++ b/index.html
@@ -37,54 +37,21 @@
                                 <h3>Doing something Green? Share it and earn rewards.</h3> 
 						        <div id="text-box"><textarea class="text-area" name="content" rows="3" cols="46"></textarea>
 						        </div>
-						        <div id="tags">
+						        <div id="tag-list">
 						            <ul>
-
-						            <li>
-						            <input name="cat_checks" value="ahRzYW1weXhpc3N0b2Nrd2F0Y2hlcnIQCxIIQ2F0ZWdvcnkYip4DDA" type="checkbox">Bike<br>
-						            </li>
-
-						            <li>
-						            <input name="cat_checks" value="ahRzYW1weXhpc3N0b2Nrd2F0Y2hlcnIQCxIIQ2F0ZWdvcnkYytwDDA" type="checkbox">Bus<br>
-						            </li>
-
-						            <li>
-						            <input name="cat_checks" value="ahRzYW1weXhpc3N0b2Nrd2F0Y2hlcnIQCxIIQ2F0ZWdvcnkYgfQDDA" type="checkbox">Reduce<br>
-						            </li>
-
-						            <li>
-						            <input name="cat_checks" value="ahRzYW1weXhpc3N0b2Nrd2F0Y2hlcnIQCxIIQ2F0ZWdvcnkY6fsDDA" type="checkbox">Recycle<br>
-						            </li>
-
-						            <li>
-						            <input name="cat_checks" value="ahRzYW1weXhpc3N0b2Nrd2F0Y2hlcnIQCxIIQ2F0ZWdvcnkY0YMEDA" type="checkbox">Reuse<br>
-						            </li>
-
-						            <li>
-						            <input name="cat_checks" value="ahRzYW1weXhpc3N0b2Nrd2F0Y2hlcnIQCxIIQ2F0ZWdvcnkYuYsEDA" type="checkbox">Organic<br>
-						            </li>
-
-						            <li>
-						            <input name="cat_checks" value="ahRzYW1weXhpc3N0b2Nrd2F0Y2hlcnIQCxIIQ2F0ZWdvcnkYoZMEDA" type="checkbox">Wind<br>
-						            </li>
-
-						            <li>
-						            <input name="cat_checks" value="ahRzYW1weXhpc3N0b2Nrd2F0Y2hlcnIQCxIIQ2F0ZWdvcnkYiZsEDA" type="checkbox">Solar<br>
-						            </li>
-
-						            <li>
-						            <input name="cat_checks" value="ahRzYW1weXhpc3N0b2Nrd2F0Y2hlcnIQCxIIQ2F0ZWdvcnkY8aIEDA" type="checkbox">Walk<br>
-						            </li>
-
-						            <li>
-						            <input name="cat_checks" value="ahRzYW1weXhpc3N0b2Nrd2F0Y2hlcnIQCxIIQ2F0ZWdvcnkY2aoEDA" type="checkbox">Bus<br>
-						            </li>
-
+						                <li><input name="cat_checks" value="ahRzYW1weXhpc3N0b2Nrd2F0Y2hlcnIQCxIIQ2F0ZWdvcnkYip4DDA" type="checkbox">Bike</li>
+						                <li><input name="cat_checks" value="ahRzYW1weXhpc3N0b2Nrd2F0Y2hlcnIQCxIIQ2F0ZWdvcnkYytwDDA" type="checkbox">Bus</li>
+						                <li><input name="cat_checks" value="ahRzYW1weXhpc3N0b2Nrd2F0Y2hlcnIQCxIIQ2F0ZWdvcnkYgfQDDA" type="checkbox">Reduce</li>
+						                <li><input name="cat_checks" value="ahRzYW1weXhpc3N0b2Nrd2F0Y2hlcnIQCxIIQ2F0ZWdvcnkY6fsDDA" type="checkbox">Recycle</li>
+						                <li><input name="cat_checks" value="ahRzYW1weXhpc3N0b2Nrd2F0Y2hlcnIQCxIIQ2F0ZWdvcnkY0YMEDA" type="checkbox">Reuse</li>
+						                <li><input name="cat_checks" value="ahRzYW1weXhpc3N0b2Nrd2F0Y2hlcnIQCxIIQ2F0ZWdvcnkYuYsEDA" type="checkbox">Organic</li>
+						                <li><input name="cat_checks" value="ahRzYW1weXhpc3N0b2Nrd2F0Y2hlcnIQCxIIQ2F0ZWdvcnkYoZMEDA" type="checkbox">Wind</li>
+						                <li><input name="cat_checks" value="ahRzYW1weXhpc3N0b2Nrd2F0Y2hlcnIQCxIIQ2F0ZWdvcnkYiZsEDA" type="checkbox">Solar</li>
+						                <li><input name="cat_checks" value="ahRzYW1weXhpc3N0b2Nrd2F0Y2hlcnIQCxIIQ2F0ZWdvcnkY8aIEDA" type="checkbox">Walk</li>
+						                <li><input name="cat_checks" value="ahRzYW1weXhpc3N0b2Nrd2F0Y2hlcnIQCxIIQ2F0ZWdvcnkY2aoEDA" type="checkbox">Bus</li>
 						            </ul>
-						          </div>
-						          <div><input value="Share" type="submit"></div>
-
-								
+						        </div>
+						        <div id="submit-button"><input class="button" value="Share" type="submit"></div>
 							</div>
 					
 						    <!-- brag-list: container for list of Brags. --> 
