Added styles for voting.

--- a/index.html
+++ b/index.html
@@ -59,10 +59,12 @@
 
 							    <!-- brag-entry: container for a single Brag -->
 						        <div class="brag-entry">
-							        <div class="brag-vote">149
-								    </div>					            
+							        <div class="brag-vote">
+								    	<div class="vote-count">2</div>
+									    <a href="#">vote+</a>
+								    </div>	
 						            <div class="brag-message">
-							            <p>Commuting to work with 3 other people in my new Volt.</p>
+							            <p>Nunc non leo a lorem luctus feugiat vel ac dui. Morbi lobortis, orci porttitor sed. </p>
 							        </div>       	
 						            <div class="brag-meta">
 							            <p>2 hours ago - <a href="#">#commute</a> <a href="#">#carpool</a></p>
@@ -72,10 +74,29 @@
 
 							    <!-- brag-entry: container for a single Brag -->
 						        <div class="brag-entry">
-							        <div class="brag-vote">149
-								    </div>					            
+							        <div class="brag-vote">
+								    	<div class="vote-count">58</div>
+									    <a href="#">vote+</a>
+								    </div>	
 						            <div class="brag-message">
-							            <p>Commuting to work with 3 other people in my new Volt.</p>
+							            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi lobortis, orci porttitor sed. </p>
+							        </div>       	
+						            <div class="brag-meta">
+							            <p>2 hours ago - <a href="#">#commute</a> <a href="#">#carpool</a> <a href="#">#commute</a> <a href="#">#reduce</a> <a href="#">#reuse</a> <a href="#">#wind</a></p>
+							        </div>       	
+						            <div class="brag-stats">...</div>       	
+								    <div class="brag-comments">...</div>   
+						        </div><!-- /brag-entry -->
+
+							    <!-- brag-entry: container for a single Brag -->
+						        <div class="brag-entry">
+							        <div class="brag-vote">
+								    	<div class="vote-count">392</div>
+									    <a href="#">vote+</a>
+								    </div>	
+				            
+						            <div class="brag-message">
+							            <p>Lorem ipsum dolor sit amet. </p>
 							        </div>       	
 						            <div class="brag-meta">
 							            <p>2 hours ago - <a href="#">#commute</a> <a href="#">#carpool</a></p>
@@ -86,24 +107,13 @@
 
 							    <!-- brag-entry: container for a single Brag -->
 						        <div class="brag-entry">
-							        <div class="brag-vote">149
-								    </div>					            
+							        <div class="brag-vote">
+								    	<div class="vote-count">1,003</div>
+									    <a href="#">vote+</a>
+								    </div>	
+				            
 						            <div class="brag-message">
-							            <p>Commuting to work with 3 other people in my new Volt.</p>
-							        </div>       	
-						            <div class="brag-meta">
-							            <p>2 hours ago - <a href="#">#commute</a> <a href="#">#carpool</a></p>
-							        </div>       	
-						            <div class="brag-stats">...</div>       	
-								    <div class="brag-comments">...</div>   
-						        </div><!-- /brag-entry -->
-
-							    <!-- brag-entry: container for a single Brag -->
-						        <div class="brag-entry">
-							        <div class="brag-vote">149
-								    </div>					            
-						            <div class="brag-message">
-							            <p>Commuting to work with 3 other people in my new Volt.</p>
+							            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non leo a lorem luctus feugiat vel ac dui. Morbi lobortis, orci porttitor sed</p>
 							        </div>       	
 						            <div class="brag-meta">
 							            <p>2 hours ago - <a href="#">#commute</a> <a href="#">#carpool</a></p>
