--- a/index.html
+++ b/index.html
@@ -128,6 +128,15 @@
 
                         <!-- SIDEBAR --> 
                         <div id="sidebar">
+	                        <div class="side-block">
+	                            <div id="start">
+		                            <div id="start-button"><h3><a href="#">Get Started!</a></h3></div>
+		                            <ul>
+		                                <li>Get ranked on your Green accomplishments.</li>
+		                                <li>Earn beans for you and your community and get rewards.</li>
+		                            </ul>
+		                        </div>
+		                    </div>
 						</div>
 	                
 	                </div><!-- /bar-wrapper -->
