Cleaned up Sidebar.

--- a/index.html
+++ b/index.html
@@ -130,11 +130,12 @@
                         <div id="sidebar">
 	                        <div class="side-block">
 	                            <div id="start">
-		                            <div id="start-button"><h3><a href="#">Get Started!</a></h3></div>
+                                    <h3>Who's The Greenest Of Them All?</h3>
 		                            <ul>
 		                                <li>Get ranked on your Green accomplishments.</li>
 		                                <li>Earn beans for you and your community and get rewards.</li>
 		                            </ul>
+		                            <div id="start-button"><a href="#"><img src="static/images/get-beans-button.png"/></a></div>
 		                        </div>
 		                    </div>
 						</div>
