Polished index.html template

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						            <div class="brag-meta">
 							            <p>2 hours ago - <a href="#">#commute</a> <a href="#">#carpool</a></p>
 							        </div>       	
-								    <div class="brag-comments">...</div>   
+								    <div class="brag-comments"></div>   
 						        </div><!-- /brag-entry -->
 
 							    <!-- brag-entry: container for a single Brag -->
@@ -88,8 +88,8 @@
 						            <div class="brag-meta">
 							            <p>2 hours ago - <a href="#">#commute</a> <a href="#">#carpool</a> <a href="#">#commute</a> <a href="#">#reduce</a> <a href="#">#reuse</a> <a href="#">#wind</a></p>
 							        </div>       	
-						            <div class="brag-stats">...</div>       	
-								    <div class="brag-comments">...</div>   
+						            <div class="brag-stats"></div>       	
+								    <div class="brag-comments"></div>   
 						        </div><!-- /brag-entry -->
 
 							    <!-- brag-entry: container for a single Brag -->
@@ -105,8 +105,8 @@
 						            <div class="brag-meta">
 							            <p>2 hours ago - <a href="#">#commute</a> <a href="#">#carpool</a></p>
 							        </div>       	
-						            <div class="brag-stats">...</div>       	
-								    <div class="brag-comments">...</div>   
+						            <div class="brag-stats"></div>       	
+								    <div class="brag-comments"></div>   
 						        </div><!-- /brag-entry -->
 
 							    <!-- brag-entry: container for a single Brag -->
@@ -122,8 +122,8 @@
 						            <div class="brag-meta">
 							            <p>2 hours ago - <a href="#">#commute</a> <a href="#">#carpool</a></p>
 							        </div>       	
-						            <div class="brag-stats">...</div>       	
-								    <div class="brag-comments">...</div>   
+						            <div class="brag-stats"></div>       	
+								    <div class="brag-comments"></div>   
 						        </div><!-- /brag-entry -->
 
 						    </div><!-- /brag-list -->							
